Update meta tags in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/supersizetoken.png" />
+    <link rel="icon" href="%PUBLIC_URL%/slime.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Supersize: high-stakes, eat or be eaten game on Solana" />
+    <meta name="description" content="SlimeCoin: high-stakes, eat or be eaten games on Solana" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="Supersize" />
+    <meta property="og:title" content="SlimeCoin" />
     <meta
       property="og:description"
-      content="Supersize is an eat or be eaten multiplayer game on the Solana blockchain."
+      content="Slimecoin is an eat or be eaten multiplayer game on the Solana blockchain."
     />
-    <meta property="og:image" content="https://supersize.gg/card.png" />
-    <meta property="og:url" content="https://supersize.gg" />
+
+    <meta property="og:url" content="https://slimecoin.io" />
 
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Supersize" />
+    <meta name="twitter:title" content="Slimecoin" />
     <meta
       name="twitter:description"
-      content="Supersize is an eat or be eaten multiplayer game on the Solana blockchain."
+      content="Slimecoin is an eat or be eaten multiplayer game on the Solana blockchain."
     />
-    <meta name="twitter:image" content="https://supersize.gg/card.png" />
+    <!-- <meta name="twitter:image" content="https://slimecoin.io/card.png" /> -->
     <meta name="twitter:creator" content="@supersizegg" />
 
     <!--
@@ -41,7 +41,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Supersize</title>
+    <title>Slimecoin</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap" rel="stylesheet" />
