Add temp twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="SlimeCoin" />
+    <meta property="og:title" content="Slimecoin.io" />
     <meta
       property="og:description"
       content="Slimecoin is an eat or be eaten multiplayer game on the Solana blockchain."
@@ -19,13 +19,13 @@
 
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Slimecoin" />
+    <meta name="twitter:title" content="slimecoin.io" />
     <meta
       name="twitter:description"
-      content="Slimecoin is an eat or be eaten multiplayer game on the Solana blockchain."
+      content="Discover casual skill-based games where you can win real prizes, built on Solana."
     />
-    <!-- <meta name="twitter:image" content="https://slimecoin.io/card.png" /> -->
-    <meta name="twitter:creator" content="@supersizegg" />
+    <meta name="twitter:image" content="https://slimecoin.io/card.png" />
+    <meta name="twitter:creator" content="@slimecoinio" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
