--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,25 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <!-- Open Graph meta tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://slimecoin.io" />
+    <meta property="og:site_name" content="Slimecoin" />
     <meta property="og:title" content="Slimecoin.io" />
     <meta
       property="og:description"
-      content="Slimecoin is an eat or be eaten multiplayer game on the Solana blockchain."
+      content="Discover casual skill-based games where you can win real prizes, built on Solana."
     />
-
-    <meta property="og:url" content="https://slimecoin.io" />
+    <meta property="og:image" content="https://slimecoin.io/card.png" />
 
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="slimecoin.io" />
+    <meta name="twitter:creator" content="@slimecoinio" />
+    <meta name="twitter:title" content="Slimecoin.io" />
     <meta
       name="twitter:description"
       content="Discover casual skill-based games where you can win real prizes, built on Solana."
     />
     <meta name="twitter:image" content="https://slimecoin.io/card.png" />
-    <meta name="twitter:creator" content="@slimecoinio" />
-
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
